--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,8 @@
 ﻿
 
+12.11.19.0   In the AutomationElementFinder the current highlight can be toggled off and on back again
+12.11.19.0   If there is no clickable point available because of an invible control or because it is out of screen, a InvalidOperationException will be thrown by the MouseEx
+12.11.19.0   Add IsVisible, IsEnabled, WaitForControlEnabled and WaitForControlVisible to the BasicElement
 12.11.19.0   Fixed possible crash if a control without a clickable point was tried to click
 12.11.19.0   Add DoubleClick functionalities to the MouseEx
 12.11.6.0    Initialize with some basic behaviors
