--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 ﻿
 
+12.11.29.0   Add overloads to the WindowFocus method to take a WpfWindow too (WindowUnderTest and ChildWindow are WpfWindow objects)
+12.11.29.0   Remove TextBlockReader, since the BasicElementFinder can get TextBlocks this class gets obsolete
 12.11.26.0   The CleanMessagebox method in the Shutdown object closes only known messageboxes (Registered with the ShutdownConfiguration.SetSetMessageBoxInfo)
 12.11.26.0   Add timeout to the WaitFor** in the BasicElement
 12.11.26.0   Remove methods which invokes funktionality without using the mouse. They does not represent the real user
