--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
 ﻿
 
+13.1.16.0    Fix crash of the AutomationElementFinder if a sub child is selected and another element will be detected
 13.1.9.0     Add exception display for the AutomationElementFinder to see the reason if it has been crashed
 13.1.3.0     Add element availability checks to be sure it did not crash if the children will be read very often and are very dynamic added and removed
 13.1.3.0     Remove annoying horizontal scroll bar in the tree of the AutomationElementFinder
