--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
 ﻿
 
+14.1.8.0     Add GetForegroundWindow to WindowFinder
 13.5.29.0    Renew the CanClicked in the BasicWindow because it has not worked if the child windows has the correct owner set
 13.5.29.0    The Highlighter has used a method which potentially has not work every time on a 64 bit application
 13.5.27.0    Add CanClicked and GetChildWindows to the BasicWindow
