--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,8 @@
 ==============================
 Release 2.0.0.X
 ==============================
+2014-04-05    If no timeout was set, the UI and WindowFinder search methods was return too fast even a result would be able to return
+2014-04-05    The Do.Launch was has really launched the application
 2014-04-04    Adjust documentation to not show any warning
 2014-04-04    Add documentations
 2014-04-03    Write usage of the interval in exceptions as well
