--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,69 +3,69 @@
 ==============================
 Release 2.*
 ==============================
-2014-06-06    Listen for system key CTRL+E to enable and disable the ElementFinder
+2014-06-06    ElementFinder: Listen for system key CTRL+E to enable and disable
 2014-05-31    Add possibility to start UI element search from the main window of the current to test process
-2014-05-31    Add possibility to start UI element search from the last found window
-2014-05-31    Add possibility to start UI element search from the desktop
+              Add possibility to start UI element search from the last found window
+              Add possibility to start UI element search from the desktop
 2014-05-28    Add possibility to search for UI elements which has the keyboard focus
-2014-05-28    Use a toggle slider for a better visualization of the enabled and disabled state of the ElementFinder
-2014-05-26    Add clear button to remove all visible elements in the ElementFinder
-2014-05-26    Add support for all .net available languages for the window buttons
+              ElementFinder: Use a toggle slider for a better visualization of the enabled and disabled state
+2014-05-26    ElementFinder: Add clear button to remove all visible elements
+              Add support for all .net available languages for the window buttons
 
 ==============================
 Release 2.0.0.X
 ==============================
 2014-04-07    Rename "Using" by "Use"
-2014-04-07    Adjust error output
+              Adjust error output
 2014-04-05    Remove methods to search for children in the BasicList and BasicCombobox themself, they was not working stable enough
-2014-04-05    If no timeout was set, the UI and WindowFinder search methods was return too fast even a result would be able to return
-2014-04-05    The Do.Launch was has really launched the application
+              If no timeout was set, the UI and WindowFinder search methods was return too fast even a result would be able to return
+              The Do.Launch was has really launched the application
 2014-04-04    Adjust documentation to not show any warning
-2014-04-04    Add documentations
+              Add documentations
 2014-04-03    Write usage of the interval in exceptions as well
-2014-04-03    Add possibility to define an interval for searching for windows
-2014-04-03    Add possibility to define an interval for waiting of the CPU idle
-2014-04-03    Set the working directory of the proces called by the Do.Launch(*)
-2014-04-03    Add possibility to define an interval for searching of UI elements
+              Add possibility to define an interval for searching for windows
+              Add possibility to define an interval for waiting of the CPU idle
+              Set the working directory of the proces called by the Do.Launch(*)
+              Add possibility to define an interval for searching of UI elements
 2014-04-02    ElementFinder: Add possibility to copy the automation id to the clipboard automatically
-2014-04-02    Let the MouseEx and KeyboardEx return the CombinableDo to be able to append additional actions
+              Let the MouseEx and KeyboardEx return the CombinableDo to be able to append additional actions
 2014-04-01    ElementFinder: Automatically select the first element in the tree
-2014-04-01    ElementFinder: Add possibility to hide empty properties
-2014-04-01    ElementFinder: Show item automation properties
-2014-04-01    ElementFinder: Load and save current application settings on close and loading
-2014-04-01    ElementFinder: Adjust style of the CopyableTextBox
-2014-04-01    ElementFinder: Add possibility to copy values from a text box
-2014-04-01    ElementFinder: Add toggle button for expand or collapse all after search
-2014-04-01    ElementFinder: Add window for unhandled exceptions
-2014-04-01    ElementFinder: Highlight the selected element in the elements tree
-2014-04-01    ElementFinder: Add possibility to enable and disable the ElementFinder out of the large view
-2014-04-01    ElementFinder: Show a symbol beside a found element if it has an automation id
-2014-04-01    ElementFinder: Add tooltips to UI elements
-2014-04-01    Add possibility to get children and parents from BasicElements
+              ElementFinder: Add possibility to hide empty properties
+              ElementFinder: Show item automation properties
+              ElementFinder: Load and save current application settings on close and loading
+              ElementFinder: Adjust style of the CopyableTextBox
+              ElementFinder: Add possibility to copy values from a text box
+              ElementFinder: Add toggle button for expand or collapse all after search
+              ElementFinder: Add window for unhandled exceptions
+              ElementFinder: Highlight the selected element in the elements tree
+              ElementFinder: Add possibility to enable and disable the ElementFinder out of the large view
+              ElementFinder: Show a symbol beside a found element if it has an automation id
+              ElementFinder: Add tooltips to UI elements
+              Add possibility to get children and parents from BasicElements
 2014-03-31    Add possibility to append do actions on basic elements
-2014-03-31    Implement chain-of-actions
-2014-03-31    Implement searching for the full UI tree 
-2014-03-31    ElementFinder: Bring small and large views together in one switchable view
+              Implement chain-of-actions
+              Implement searching for the full UI tree 
+              ElementFinder: Bring small and large views together in one switchable view
 2014-03-30    ElementFinder: Add possibility to deactivate the element searching
-2014-03-30    ElementFinder: Add highlighting
-2014-03-30    ElementFinder: Implement first simple item search with the new ElementFinder in the ShortView
-2014-03-30    Merge searching for messagebox and dialogs into a generic method of the WindowFinder
-2014-03-30    Remove timeout on searching the single OK button to get rid of the changing automation ID in the windows message box
-2014-03-30    Fix wrong automation ID in BasicFontPickerDialog
-2014-03-30    Bring base object to the windows and dialogs to be used for the window searcher and for eliminating duplicate code
-2014-03-30    Add reading of the foreground window
-2014-03-30    Add search for font picker and color picker dialogs in the WindowSearcher
-2014-03-30    Add BasicColorPickerDialog
-2014-03-30    Let derive the dialogs from BasicDialog because they have not all functionality of BasicWindows
-2014-03-30    Add BasicFontPickerDialog
+              ElementFinder: Add highlighting
+              ElementFinder: Implement first simple item search with the new ElementFinder in the ShortView
+              Merge searching for messagebox and dialogs into a generic method of the WindowFinder
+              Remove timeout on searching the single OK button to get rid of the changing automation ID in the windows message box
+              Fix wrong automation ID in BasicFontPickerDialog
+              Bring base object to the windows and dialogs to be used for the window searcher and for eliminating duplicate code
+              Add reading of the foreground window
+              Add search for font picker and color picker dialogs in the WindowSearcher
+              Add BasicColorPickerDialog
+              Let derive the dialogs from BasicDialog because they have not all functionality of BasicWindows
+              Add BasicFontPickerDialog
 2014-03-29    Add BasicSaveFileDialog and BasicBrowseFolderDialog
-2014-03-29    Adjust BasicOpenFileDialog for missing elements and to be more save to find the correct buttons
-2014-03-29    Add functionality to search for message boxes in the WindowFinder
-2014-03-29    Renew the WindowFinder to have the new syntax with much more functionality
-2014-03-29    Replace StringComparison enum by an own CompareKind for the UI object for a better element search
-2014-03-29    Remove MessageBoxHandler, this functionality is inside the BasicMessageBox
-2014-03-29    Replace BasicElementFinder by a newer UI object with much more possibilities
-2014-03-29    Adjust inner structure for 2.0.0.0. Break downgrade compatibility, it will be ensured after 2.0.0.0 or later
+              Adjust BasicOpenFileDialog for missing elements and to be more save to find the correct buttons
+              Add functionality to search for message boxes in the WindowFinder
+              Renew the WindowFinder to have the new syntax with much more functionality
+              Replace StringComparison enum by an own CompareKind for the UI object for a better element search
+              Remove MessageBoxHandler, this functionality is inside the BasicMessageBox
+              Replace BasicElementFinder by a newer UI object with much more possibilities
+              Adjust inner structure for 2.0.0.0. Break downgrade compatibility, it will be ensured after 2.0.0.0 or later
 2014-03-16    Take over all objects from 1.0.0.0
 ==============================
 
