--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,7 @@
 
 
 ==============================
-Release 2.*
+Release 2.2.0.X
 ==============================
 2014-07-15    BasicElements: Add possibility to make a shadow copy of each basic element
               UI: Add possibility to read the full UI tree as a shadow copy
