--- a/Changelog.txt
+++ b/Changelog.txt
@@ -33,29 +33,11 @@ Release 2.2.0.X
               WindowFinder: Add with Is the possibility to find windows which has a specific relation to another object
 2014-07-09    DynamicSleep: Add DynamicSleep
               CodedUIEnvironment: Add CodedUIEnvironment object for global coded UI settings
-2014-07-08    ElementFinder: Add possibility to change the application blacklist; 
-2014-07-07    ElementFinder: Add tab to show a suggested basic element
-              ElementFinder: Add reading BasicElement properties; 
-              ElementFinder: Add notification to the bottom of the suggest page; 
-2014-07-06    ElementFinder: Add behavior shortcuts and let the user change them
-2014-07-05    ElementFinder: Style controls
-2014-07-04    ElementFinder: Add ElementObserver to detect if an element disappears to close the highlighter automatically
-2014-07-03    ElementFinder: Add possibility to keep element highlighter position and size up to date
-2014-07-02    ElementFinder: Change default value of the LeftColumnWidth from 50 to 230
-2014-07-01    ElementFinder: Add possibility to define the ElementFinder TopMost or not
-              ElementFinder: Remember and restore the width of the left column
-              ElementFinder: Ignore Visual Studio process
-              ElementFinder: Add blacklisted applications
-              ElementFinder: Add possibility to define the element highlight as topmost or non topmost
-              ElementFinder: The marks if the element has an automation id or not will never become white anymore
-2014-06-06    ElementFinder: Listen for system key CTRL+E to enable and disable
 2014-05-31    From: Add possibility to start UI element search from the main window of the current to test process
               From: Add possibility to start UI element search from the last found window
               From: Add possibility to start UI element search from the desktop
 2014-05-28    By: Add possibility to search for UI elements which has the keyboard focus
-              ElementFinder: Use a toggle slider for a better visualization of the enabled and disabled state
-2014-05-26    ElementFinder: Add clear button to remove all visible elements
-              BasicWindow: Add support for all .net available languages for the window buttons like minimize, maximize and close
+2014-05-26    BasicWindow: Add support for all .net available languages for the window buttons like minimize, maximize and close
 
 ==============================
 Release 2.0.0.X
@@ -72,29 +54,12 @@ Release 2.0.0.X
               Add possibility to define an interval for waiting of the CPU idle
               Set the working directory of the proces called by the Do.Launch(*)
               Add possibility to define an interval for searching of UI elements
-2014-04-02    ElementFinder: Add possibility to copy the automation id to the clipboard automatically
-              Let the MouseEx and KeyboardEx return the CombinableDo to be able to append additional actions
-2014-04-01    ElementFinder: Automatically select the first element in the tree
-              ElementFinder: Add possibility to hide empty properties
-              ElementFinder: Show item automation properties
-              ElementFinder: Load and save current application settings on close and loading
-              ElementFinder: Adjust style of the CopyableTextBox
-              ElementFinder: Add possibility to copy values from a text box
-              ElementFinder: Add toggle button for expand or collapse all after search
-              ElementFinder: Add window for unhandled exceptions
-              ElementFinder: Highlight the selected element in the elements tree
-              ElementFinder: Add possibility to enable and disable the ElementFinder out of the large view
-              ElementFinder: Show a symbol beside a found element if it has an automation id
-              ElementFinder: Add tooltips to UI elements
-              Add possibility to get children and parents from BasicElements
+2014-04-02    Let the MouseEx and KeyboardEx return the CombinableDo to be able to append additional actions
+2014-04-01    Add possibility to get children and parents from BasicElements
 2014-03-31    Add possibility to append do actions on basic elements
               Implement chain-of-actions
               Implement searching for the full UI tree 
-              ElementFinder: Bring small and large views together in one switchable view
-2014-03-30    ElementFinder: Add possibility to deactivate the element searching
-              ElementFinder: Add highlighting
-              ElementFinder: Implement first simple item search with the new ElementFinder in the ShortView
-              Merge searching for messagebox and dialogs into a generic method of the WindowFinder
+2014-03-30    Merge searching for messagebox and dialogs into a generic method of the WindowFinder
               Remove timeout on searching the single OK button to get rid of the changing automation ID in the windows message box
               Fix wrong automation ID in BasicFontPickerDialog
               Bring base object to the windows and dialogs to be used for the window searcher and for eliminating duplicate code
