--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,12 @@
 
 
 ==============================
+Release 2.6.1.0
+==============================
+2016-02-13    Adjust mouse_event signatur used in the MouseEx which causes the visual studio debugger to crash
+
+
+==============================
 Release 2.6.0.0
 ==============================
 2015-12-24    Update 3rdParty libraries to have it stand-alone
